[package]
name = "clock-rs"
version = "0.1.0"
edition = "2024"
description = "Clock trait abstraction over DateTime<Utc> with a SystemClock for production and a FakeClock for tests"
license = "MIT"
repository = "https://github.com/The127/clock-rs"

[features]
test-utils = ["dep:parking_lot"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
parking_lot = "0.12"
